clusters/cluster1/homeautomation/appdaemon/appdaemon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appdaemon
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appdaemon
  strategy:
    rollingUpdate: null
    type: Recreate
  template:
    metadata:
      labels:
        app: appdaemon
    spec:
      containers:
      - name: appdaemon
<<<<<<< HEAD
        image: acockburn/appdaemon:4.5.1 # {"$imagepolicy": "flux-system:appdaemon"}
        command: [ "sleep" ]
        args: [ "infinity" ]
=======
        image: acockburn/appdaemon:4.5.2 # {"$imagepolicy": "flux-system:appdaemon"}
>>>>>>> e185783d94d5a92bc233798dd8d749ad472e0c06
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: appdaemon-config
          mountPath: /conf
      volumes:
      - name: appdaemon-config
        persistentVolumeClaim:
          claimName: appdaemon-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: appdaemon
  namespace: default
  labels:
    app: appdaemon
spec:
  selector:
    app: appdaemon
  ports:
  - name: appdaemon
    port: 5050
    targetPort: 5050
  type: ClusterIP
