clusters/cluster1/homeautomation/appdaemon/appdaemon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appdaemon-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01"
spec:
  ingressClassName: internal-nginx
  tls:
  - hosts:
    - "appdaemon.tallflix.ca"
    secretName: tls-secret-appdaemon
  rules:
  - host: appdaemon.tallflix.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: appdaemon
            port:
              number: 5050
